<resources>
    <string name="app_name">Riichi Trainer</string>
    <string name="default_nickname">Player</string>
    <string name="resources_main_test">The resources below can help new players in learning and remembering the rules of Riichi Mahjong. The Yaku list describes different winnable hands and scoring which determines their value.</string>
    <string name="quiz_default_question_test">Question 1/10</string>
    <string name="quiz_situation">Situation</string>
    <string name="quiz_mode">Mode</string>
    <string name="quiz_dora">Dora</string>
    <string name="quiz_river">River</string>
    <string name="quiz_ansA">Answer A</string>
    <string name="quiz_ansB">Answer B</string>
    <string name="quiz_ansC">Answer C</string>
    <string name="quiz_ansD">Answer D</string>
    <string name="quiz_next">Next</string>
    <string name="main_long_text">A small quiz app for practicing riichi mahjong gameplay. You can train your skills in discard decisions, yaku recognition or basic opponent reading skills</string>
    <string name="view_stats_reset_btn">Reset stats</string>
    <string name="view_stats_heading">Player stats</string>
    <string name="view_settings_save_button">Save settings</string>
    <string name="view_settings_opt_bgm">Play background music during quiz</string>
    <string name="view_settings_opt_sfx">Play quiz sound effects</string>
    <string name="view_settings_opt_timel_imit">Use question timer</string>
    <string name="view_settings_opt_sec_per_ques">Seconds per question</string>
    <string name="view_settings_opt_diff">Difficulty</string>
    <string name="view_settings_opt_nick">Nickname</string>
    <string name="view_settings_heading">Settings</string>
    <string name="view_result_main_btn">Main menu</string>
    <string name="view_result_retry_btn">Try again</string>
    <string name="view_result_share_btn">Share result</string>
    <string name="view_mode_choose_text">Choose quiz mode</string>
    <string name="view_mode_opt_discard">Discard decision</string>
    <string name="view_mode_opt_yaku">Yaku recognition</string>
    <string name="view_mode_opt_oppo">Opponent reading</string>
    <string name="view_mode_opt_mixed">Mixed quiz</string>
    <string name="view_result_heading">Quiz result</string>
    <string name="view_res_heading">Riichi resources</string>
    <string name="view_res_opt_basic_rules">Open basic rules</string>
    <string name="view_res_opt_yaku_list">Open Yaku list</string>
    <string name="view_res_opt_wiki">Open Riichi Wiki</string>
    <string name="view_main_welcome_heading">Welcome, Player</string>
    <string name="view_main_start_btn">Start quiz</string>
    <string name="view_main_settings_btn">Settings</string>
    <string name="view_main_stats_bth">Player stats</string>
    <string name="view_main_res_bthn">Riichi resources</string>
</resources>
