<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/riichi_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/riichi_dark"
            android:gravity="center"
            android:paddingBottom="6dp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_main_welcome_heading"
            android:gravity="center"
            android:textSize="16sp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_main_start_btn"
            android:textColor="#FFFFFF"
            android:background="@color/button_main_simple"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_main_settings_btn"
            android:textColor="#FFFFFF"
            android:background="@color/button_main_simple"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/statsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_main_stats_bth"
            android:textColor="#FFFFFF"
            android:background="@color/button_main_simple"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/resourcesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_main_res_bthn"
            android:textColor="#FFFFFF"
            android:background="@color/button_main_simple" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_long_text"
            android:gravity="center"
            android:textSize="14sp"
            android:paddingTop="24dp" />

    </LinearLayout>
</LinearLayout>
